Fix/overlapping image issue (#592)
* Replace One Image with two overlapping image

* fix  width and height of the images

---------

--- a/screens/desktop-app/desktop-app.module.css
+++ b/screens/desktop-app/desktop-app.module.css
@@ -1,5 +1,28 @@
+.desktop-app-image-container {
+  max-width: 800px;
+  height: 550px;
+  position: relative;
+  margin: 0 auto;
+}
+
+.desktop-app-loading-image {
+  width: 100%;
+  height: 80%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+
 .desktop-app-image {
-  max-width: 900px;
-  max-height: 500px;
-  min-height: 190px;
+  width: 65%;
+  height: auto;
+  object-fit: contain;
+  position: absolute;
+  top: 75%;
+  left: 60%;
+  transform: translate(0%, -50%);
+  z-index: 1;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
 }
